cchr/intermediate/cchr.output
Terminals which are not used

   TOK_LCBRAC
   TOK_RCBRAC
   TOK_ERROR


Grammar

    0 $accept: main $end

    1 main: input

    2 input: /* empty */
    3      | input stmt

    4 tokenlist: tokenlist token
    5          | /* empty */

    6 etokenlist: etokenlist etoken
    7           | /* empty */

    8 token: literal
    9      | TOK_FUNC arglist TOK_RRBRAC
   10      | TOK_FUNC TOK_RRBRAC
   11      | TOK_SYMB
   12      | TOK_LRBRAC etokenlist TOK_RRBRAC

   13 etoken: token
   14       | TOK_SPIPE
   15       | TOK_SYMBAT

   16 exprlist: TOK_TRUE
   17         | tokenlist
   18         | exprlist TOK_COMMA tokenlist

   19 arglist: etokenlist
   20        | arglist TOK_COMMA etokenlist

   21 extlist: TOK_SYMB
   22        | extlist TOK_COMMA TOK_SYMB

   23 literal: TOK_COMMA
   24        | TOK_CONST
   25        | TOK_OP
   26        | TOK_AT

   27 rname: TOK_SYMBAT
   28      | /* empty */

   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   30     | rname exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   31     | rname exprlist TOK_PROP tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   33     | rname exprlist TOK_SIMP exprlist TOK_SEMI
   34     | rname exprlist TOK_PROP exprlist TOK_SEMI

   35 stmt: TOK_CONSTRAINT constrlist TOK_SEMI
   36     | TOK_EXTERN extlist TOK_SEMI
   37     | rule

   38 constrlist: constr
   39           | constrlist TOK_COMMA constr

   40 constr: TOK_FUNC typelist TOK_RRBRAC

   41 typelist: /* empty */
   42         | typelistc

   43 typelistc: type
   44          | typelistc TOK_COMMA type

   45 type: TOK_SYMB
   46     | type TOK_SYMB


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_CONSTRAINT (258) 35
TOK_TRUE (259) 16
TOK_LCBRAC (260)
TOK_RCBRAC (261)
TOK_SEMI (262) 29 30 31 32 33 34 35 36
TOK_COMMA (263) 18 20 22 23 39 44
TOK_AT (264) 26
TOK_SIMP (265) 29 30 32 33
TOK_PROP (266) 31 34
TOK_SPIPE (267) 14 29 30 31
TOK_BSLASH (268) 29 32
TOK_LRBRAC (269) 12
TOK_RRBRAC (270) 9 10 12 40
TOK_FUNC (271) 9 10 40
TOK_SYMBAT (272) 15 27
TOK_CONST (273) 24
TOK_SYMB (274) 11 21 22 45 46
TOK_OP (275) 25
TOK_EXTERN (276) 36
TOK_ERROR (277)
PRE_ENDALIST (278)
PRE_ELIST (279)
PRE_ETLIST (280)


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
main (27)
    on left: 1, on right: 0
input (28)
    on left: 2 3, on right: 1 3
tokenlist (29)
    on left: 4 5, on right: 4 17 18 29 30 31
etokenlist (30)
    on left: 6 7, on right: 6 12 19 20
token (31)
    on left: 8 9 10 11 12, on right: 4 13
etoken (32)
    on left: 13 14 15, on right: 6
exprlist (33)
    on left: 16 17 18, on right: 18 29 30 31 32 33 34
arglist (34)
    on left: 19 20, on right: 9 20
extlist (35)
    on left: 21 22, on right: 22 36
literal (36)
    on left: 23 24 25 26, on right: 8
rname (37)
    on left: 27 28, on right: 29 30 31 32 33 34
rule (38)
    on left: 29 30 31 32 33 34, on right: 37
stmt (39)
    on left: 35 36 37, on right: 3
constrlist (40)
    on left: 38 39, on right: 35 39
constr (41)
    on left: 40, on right: 38 39
typelist (42)
    on left: 41 42, on right: 40
typelistc (43)
    on left: 43 44, on right: 42 44
type (44)
    on left: 45 46, on right: 43 44 46


state 0

    0 $accept: . main $end

    $default  reduce using rule 2 (input)

    main   go to state 1
    input  go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: input .
    3 input: input . stmt

    TOK_CONSTRAINT  shift, and go to state 4
    TOK_SYMBAT      shift, and go to state 5
    TOK_EXTERN      shift, and go to state 6

    $end      reduce using rule 1 (main)
    $default  reduce using rule 28 (rname)

    rname  go to state 7
    rule   go to state 8
    stmt   go to state 9


state 3

    0 $accept: main $end .

    $default  accept


state 4

   35 stmt: TOK_CONSTRAINT . constrlist TOK_SEMI

    TOK_FUNC  shift, and go to state 10

    constrlist  go to state 11
    constr      go to state 12


state 5

   27 rname: TOK_SYMBAT .

    $default  reduce using rule 27 (rname)


state 6

   36 stmt: TOK_EXTERN . extlist TOK_SEMI

    TOK_SYMB  shift, and go to state 13

    extlist  go to state 14


state 7

   29 rule: rname . exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   30     | rname . exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   31     | rname . exprlist TOK_PROP tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname . exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   33     | rname . exprlist TOK_SIMP exprlist TOK_SEMI
   34     | rname . exprlist TOK_PROP exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 16
    exprlist   go to state 17


state 8

   37 stmt: rule .

    $default  reduce using rule 37 (stmt)


state 9

    3 input: input stmt .

    $default  reduce using rule 3 (input)


state 10

   40 constr: TOK_FUNC . typelist TOK_RRBRAC

    TOK_SYMB  shift, and go to state 18

    $default  reduce using rule 41 (typelist)

    typelist   go to state 19
    typelistc  go to state 20
    type       go to state 21


state 11

   35 stmt: TOK_CONSTRAINT constrlist . TOK_SEMI
   39 constrlist: constrlist . TOK_COMMA constr

    TOK_SEMI   shift, and go to state 22
    TOK_COMMA  shift, and go to state 23


state 12

   38 constrlist: constr .

    $default  reduce using rule 38 (constrlist)


state 13

   21 extlist: TOK_SYMB .

    $default  reduce using rule 21 (extlist)


state 14

   22 extlist: extlist . TOK_COMMA TOK_SYMB
   36 stmt: TOK_EXTERN extlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 24
    TOK_COMMA  shift, and go to state 25


state 15

   16 exprlist: TOK_TRUE .

    $default  reduce using rule 16 (exprlist)


state 16

    4 tokenlist: tokenlist . token
   17 exprlist: tokenlist .

    TOK_AT      shift, and go to state 27
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 17 (exprlist)

    token    go to state 33
    literal  go to state 34


state 17

   18 exprlist: exprlist . TOK_COMMA tokenlist
   29 rule: rname exprlist . TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   30     | rname exprlist . TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   31     | rname exprlist . TOK_PROP tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname exprlist . TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   33     | rname exprlist . TOK_SIMP exprlist TOK_SEMI
   34     | rname exprlist . TOK_PROP exprlist TOK_SEMI

    TOK_COMMA   shift, and go to state 35
    TOK_SIMP    shift, and go to state 36
    TOK_PROP    shift, and go to state 37
    TOK_BSLASH  shift, and go to state 38


state 18

   45 type: TOK_SYMB .

    $default  reduce using rule 45 (type)


state 19

   40 constr: TOK_FUNC typelist . TOK_RRBRAC

    TOK_RRBRAC  shift, and go to state 39


state 20

   42 typelist: typelistc .
   44 typelistc: typelistc . TOK_COMMA type

    TOK_COMMA  shift, and go to state 40

    $default  reduce using rule 42 (typelist)


state 21

   43 typelistc: type .
   46 type: type . TOK_SYMB

    TOK_SYMB  shift, and go to state 41

    $default  reduce using rule 43 (typelistc)


state 22

   35 stmt: TOK_CONSTRAINT constrlist TOK_SEMI .

    $default  reduce using rule 35 (stmt)


state 23

   39 constrlist: constrlist TOK_COMMA . constr

    TOK_FUNC  shift, and go to state 10

    constr  go to state 42


state 24

   36 stmt: TOK_EXTERN extlist TOK_SEMI .

    $default  reduce using rule 36 (stmt)


state 25

   22 extlist: extlist TOK_COMMA . TOK_SYMB

    TOK_SYMB  shift, and go to state 43


state 26

   23 literal: TOK_COMMA .

    $default  reduce using rule 23 (literal)


state 27

   26 literal: TOK_AT .

    $default  reduce using rule 26 (literal)


state 28

   12 token: TOK_LRBRAC . etokenlist TOK_RRBRAC

    $default  reduce using rule 7 (etokenlist)

    etokenlist  go to state 44


state 29

    9 token: TOK_FUNC . arglist TOK_RRBRAC
   10      | TOK_FUNC . TOK_RRBRAC

    TOK_RRBRAC  shift, and go to state 45

    $default  reduce using rule 7 (etokenlist)

    etokenlist  go to state 46
    arglist     go to state 47


state 30

   24 literal: TOK_CONST .

    $default  reduce using rule 24 (literal)


state 31

   11 token: TOK_SYMB .

    $default  reduce using rule 11 (token)


state 32

   25 literal: TOK_OP .

    $default  reduce using rule 25 (literal)


state 33

    4 tokenlist: tokenlist token .

    $default  reduce using rule 4 (tokenlist)


state 34

    8 token: literal .

    $default  reduce using rule 8 (token)


state 35

   18 exprlist: exprlist TOK_COMMA . tokenlist

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 48


state 36

   30 rule: rname exprlist TOK_SIMP . tokenlist TOK_SPIPE exprlist TOK_SEMI
   33     | rname exprlist TOK_SIMP . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 49
    exprlist   go to state 50


state 37

   31 rule: rname exprlist TOK_PROP . tokenlist TOK_SPIPE exprlist TOK_SEMI
   34     | rname exprlist TOK_PROP . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 51
    exprlist   go to state 52


state 38

   29 rule: rname exprlist TOK_BSLASH . exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname exprlist TOK_BSLASH . exprlist TOK_SIMP exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 16
    exprlist   go to state 53


state 39

   40 constr: TOK_FUNC typelist TOK_RRBRAC .

    $default  reduce using rule 40 (constr)


state 40

   44 typelistc: typelistc TOK_COMMA . type

    TOK_SYMB  shift, and go to state 18

    type  go to state 54


state 41

   46 type: type TOK_SYMB .

    $default  reduce using rule 46 (type)


state 42

   39 constrlist: constrlist TOK_COMMA constr .

    $default  reduce using rule 39 (constrlist)


state 43

   22 extlist: extlist TOK_COMMA TOK_SYMB .

    $default  reduce using rule 22 (extlist)


state 44

    6 etokenlist: etokenlist . etoken
   12 token: TOK_LRBRAC etokenlist . TOK_RRBRAC

    TOK_COMMA   shift, and go to state 26
    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 55
    TOK_LRBRAC  shift, and go to state 28
    TOK_RRBRAC  shift, and go to state 56
    TOK_FUNC    shift, and go to state 29
    TOK_SYMBAT  shift, and go to state 57
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    token    go to state 58
    etoken   go to state 59
    literal  go to state 34


state 45

   10 token: TOK_FUNC TOK_RRBRAC .

    $default  reduce using rule 10 (token)


state 46

    6 etokenlist: etokenlist . etoken
   19 arglist: etokenlist .

    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 55
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_SYMBAT  shift, and go to state 57
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 19 (arglist)

    token    go to state 58
    etoken   go to state 59
    literal  go to state 34


state 47

    9 token: TOK_FUNC arglist . TOK_RRBRAC
   20 arglist: arglist . TOK_COMMA etokenlist

    TOK_COMMA   shift, and go to state 60
    TOK_RRBRAC  shift, and go to state 61


state 48

    4 tokenlist: tokenlist . token
   18 exprlist: exprlist TOK_COMMA tokenlist .

    TOK_AT      shift, and go to state 27
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 18 (exprlist)

    token    go to state 33
    literal  go to state 34


state 49

    4 tokenlist: tokenlist . token
   17 exprlist: tokenlist .
   30 rule: rname exprlist TOK_SIMP tokenlist . TOK_SPIPE exprlist TOK_SEMI

    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 62
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 17 (exprlist)

    token    go to state 33
    literal  go to state 34


state 50

   18 exprlist: exprlist . TOK_COMMA tokenlist
   33 rule: rname exprlist TOK_SIMP exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 63
    TOK_COMMA  shift, and go to state 35


state 51

    4 tokenlist: tokenlist . token
   17 exprlist: tokenlist .
   31 rule: rname exprlist TOK_PROP tokenlist . TOK_SPIPE exprlist TOK_SEMI

    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 64
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 17 (exprlist)

    token    go to state 33
    literal  go to state 34


state 52

   18 exprlist: exprlist . TOK_COMMA tokenlist
   34 rule: rname exprlist TOK_PROP exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 65
    TOK_COMMA  shift, and go to state 35


state 53

   18 exprlist: exprlist . TOK_COMMA tokenlist
   29 rule: rname exprlist TOK_BSLASH exprlist . TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname exprlist TOK_BSLASH exprlist . TOK_SIMP exprlist TOK_SEMI

    TOK_COMMA  shift, and go to state 35
    TOK_SIMP   shift, and go to state 66


state 54

   44 typelistc: typelistc TOK_COMMA type .
   46 type: type . TOK_SYMB

    TOK_SYMB  shift, and go to state 41

    $default  reduce using rule 44 (typelistc)


state 55

   14 etoken: TOK_SPIPE .

    $default  reduce using rule 14 (etoken)


state 56

   12 token: TOK_LRBRAC etokenlist TOK_RRBRAC .

    $default  reduce using rule 12 (token)


state 57

   15 etoken: TOK_SYMBAT .

    $default  reduce using rule 15 (etoken)


state 58

   13 etoken: token .

    $default  reduce using rule 13 (etoken)


state 59

    6 etokenlist: etokenlist etoken .

    $default  reduce using rule 6 (etokenlist)


state 60

   20 arglist: arglist TOK_COMMA . etokenlist

    $default  reduce using rule 7 (etokenlist)

    etokenlist  go to state 67


state 61

    9 token: TOK_FUNC arglist TOK_RRBRAC .

    $default  reduce using rule 9 (token)


state 62

   30 rule: rname exprlist TOK_SIMP tokenlist TOK_SPIPE . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 16
    exprlist   go to state 68


state 63

   33 rule: rname exprlist TOK_SIMP exprlist TOK_SEMI .

    $default  reduce using rule 33 (rule)


state 64

   31 rule: rname exprlist TOK_PROP tokenlist TOK_SPIPE . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 16
    exprlist   go to state 69


state 65

   34 rule: rname exprlist TOK_PROP exprlist TOK_SEMI .

    $default  reduce using rule 34 (rule)


state 66

   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP . tokenlist TOK_SPIPE exprlist TOK_SEMI
   32     | rname exprlist TOK_BSLASH exprlist TOK_SIMP . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 70
    exprlist   go to state 71


state 67

    6 etokenlist: etokenlist . etoken
   20 arglist: arglist TOK_COMMA etokenlist .

    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 55
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_SYMBAT  shift, and go to state 57
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 20 (arglist)

    token    go to state 58
    etoken   go to state 59
    literal  go to state 34


state 68

   18 exprlist: exprlist . TOK_COMMA tokenlist
   30 rule: rname exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 72
    TOK_COMMA  shift, and go to state 35


state 69

   18 exprlist: exprlist . TOK_COMMA tokenlist
   31 rule: rname exprlist TOK_PROP tokenlist TOK_SPIPE exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 73
    TOK_COMMA  shift, and go to state 35


state 70

    4 tokenlist: tokenlist . token
   17 exprlist: tokenlist .
   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist . TOK_SPIPE exprlist TOK_SEMI

    TOK_AT      shift, and go to state 27
    TOK_SPIPE   shift, and go to state 74
    TOK_LRBRAC  shift, and go to state 28
    TOK_FUNC    shift, and go to state 29
    TOK_CONST   shift, and go to state 30
    TOK_SYMB    shift, and go to state 31
    TOK_OP      shift, and go to state 32

    $default  reduce using rule 17 (exprlist)

    token    go to state 33
    literal  go to state 34


state 71

   18 exprlist: exprlist . TOK_COMMA tokenlist
   32 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 75
    TOK_COMMA  shift, and go to state 35


state 72

   30 rule: rname exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI .

    $default  reduce using rule 30 (rule)


state 73

   31 rule: rname exprlist TOK_PROP tokenlist TOK_SPIPE exprlist TOK_SEMI .

    $default  reduce using rule 31 (rule)


state 74

   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 15

    $default  reduce using rule 5 (tokenlist)

    tokenlist  go to state 16
    exprlist   go to state 76


state 75

   32 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI .

    $default  reduce using rule 32 (rule)


state 76

   18 exprlist: exprlist . TOK_COMMA tokenlist
   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 77
    TOK_COMMA  shift, and go to state 35


state 77

   29 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP tokenlist TOK_SPIPE exprlist TOK_SEMI .

    $default  reduce using rule 29 (rule)
